EXA-28094 | Fixed css properties and removed extra spaces

--- a/app/skins/claim.less
+++ b/app/skins/claim.less
@@ -457,8 +457,8 @@ ul.multiselect-container.dropdown-menu{
     cursor: pointer !important;
   }
   .ediMenu{
-    margin-bottom: 5px !important;
-    position: absolute ;
+    margin-bottom: 5px;
+    position: absolute;
     width: 98.3%;
   }
 
